--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -1,32 +1,41 @@
-
-body {
+*{
     margin: 0;
-    padding: initial;   
-    background-color: #1d1e20;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .header{
-   
+    width: 100%;
+    min-height: 10vh;
     background: #1d1e20;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 10px;
     align-items: center;    
+    margin: auto;
 }
+
+body {
+    width: 100%;
+    min-height: 100vh;
+    background: #1d1e20;    
+}
+
+main{
+    width: 100vw;
+    min-height: 75vh;
+    background: #201b2c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .logo{
     width: 45px;
     height: 40px;
     border: 15px;
     border-radius: 10px;
-}
-
-.main{
-    
-    background: #201b2c;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 body,ul,li, p{
@@ -37,7 +46,8 @@ body,ul,li, p{
     font-size: 1.2rem;
     font-family: Arial, Helvetica, sans-serif;
 }
-.h1{
+
+h1{
     font-weight: 600 ;
     font-family: cursive    ;
     font-size: 30px;
@@ -69,7 +79,9 @@ body,ul,li, p{
 }
 
 .footer{
-        
+   
+    background: #1d1e20;
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -88,16 +100,10 @@ body,ul,li, p{
     align-items: center;
 }
 
-@media screen and (max-width: 600px ) {
-    body{
-        width:60% ;
-        height: 60%;
+@media (max-width: 720) {
+    main{
+        width: auto;
+        height: 50%;
     }
-}
 
-@media screen and (max-width: 780px ) {
-    body{
-        width: 100%;
-        height: 60%;
-    }
 }
